Affinity, recs, pings and bugfixing